# ChangeLog for app-i18n/man-pages-pl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/man-pages-pl/ChangeLog,v 1.13 2010/10/19 10:23:57 leio Exp $

  19 Oct 2010; Mart Raudsepp <leio@gentoo.org> man-pages-pl-20070628.ebuild:
  Drop to ~mips

  20 Aug 2010; Krzysztof Pawlik <nelchael@gentoo.org>
  man-pages-pl-20070628.ebuild, metadata.xml:
  Update home page and source URI, add myself as maintainer.

  25 Mar 2009; Michał Januszewski <spock@gentoo.org>
  man-pages-pl-20070628.ebuild:
  Use eautoreconf instead of an autogen script (bug #240013).

  26 Feb 2008; Raúl Porcel <armin76@gentoo.org>
  -man-pages-pl-20051024.ebuild, -man-pages-pl-20070126.ebuild,
  man-pages-pl-20070628.ebuild:
  All stable, remove old

  26 Sep 2007; Michał Januszewski <spock@gentoo.org>
  -man-pages-pl-20040401.ebuild:
  Remove an old ebuild (bug #193619).

*man-pages-pl-20070628 (16 Jul 2007)

  16 Jul 2007; Michal Januszewski <spock@gentoo.org>
  +man-pages-pl-20070628.ebuild:
  Version bump (bug #185319).

  21 Jun 2007; Michał Januszewski <spock@gentoo.org>
  man-pages-pl-20051024.ebuild, man-pages-pl-20070126.ebuild:
  Don't install a manpage for mc (bug #182535).

*man-pages-pl-20070126 (06 May 2007)

  06 May 2007; Michał Januszewski <spock@gentoo.org>
  +man-pages-pl-20070126.ebuild:
  Version bump (bug #176728).

  04 Dec 2006; Michał Januszewski <spock@gentoo.org>
  man-pages-pl-20051024.ebuild:
  Remove manpages provided by app-arch/rpm (bug #157107).

  01 Nov 2006; Michał Januszewski <spock@gentoo.org>
  man-pages-pl-20051024.ebuild:
  Don't install suauth.5 and limits.5 as these are provided by other packages
  (bug #152946).

  28 Oct 2006; Michał Januszewski <spock@gentoo.org>
  man-pages-pl-20051024.ebuild:
  Don't install manpages provided by vim-core (bug #152946).

*man-pages-pl-20051024 (09 Apr 2006)

  09 Apr 2006; Michał Januszewski <spock@gentoo.org>
  +man-pages-pl-20051024.ebuild:
  Version bump.
