@@ -1,4 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST man-PL28-06-2007.tar.gz 3436680 RMD160 af23cc1a12365ffb90dc3f2e29a4337562e927e7 SHA1 ea5d87ab905ba8fb38f79bbc4519ac751adb3dde SHA256 9cd783f5b6e42fd53b7cc929225824f3b8e9e8cb1615e481ac02a43ac29a510b
+EBUILD man-pages-pl-20070628-r1.ebuild 1402 RMD160 c1a10f01c50461b48f2654f58a08df4ddaa6bf6e SHA1 2185d3e2405e56d921a00af9eb99e8e4ae9349f5 SHA256 df1f9651f7d037d6278b9bb133f48146ee7372c13b616274e69bbe7d9ce97560
 EBUILD man-pages-pl-20070628.ebuild 1304 RMD160 56389fecdef8431a5a78042ee49eabc662f3b441 SHA1 ed4d6a6f6b64fa06e5c4012129cd7d752ef2262d SHA256 74f94e6897c142cfafc7f62af88540cec67961fe4bbb24ec149a754a0d171517
-MISC ChangeLog 2280 RMD160 5048bafc39e09d8757aa3c401ba3d7d016f8665c SHA1 535f5bd3674e5091ed72e41e11d661ee8748259e SHA256 625b6b8a068ed51bd883d457fd03cda25273034f79885edbadfa02ad3e5ec7e4
+MISC ChangeLog 2481 RMD160 65bb5aa5545b98e2a8bb5bf33447f509e57c8cb9 SHA1 7d557f4394c6667d57fc430fa362b1e57ffaa3d4 SHA256 647c996f4ef734b21d3d174759649a9a6cc88b346488cc9fd3a9ab9b98843386
 MISC metadata.xml 227 RMD160 4603991d222df002795ac3709a24e98165edd8d1 SHA1 ac9b347ba7ed1d5f92472126580ef32d63fb9bfa SHA256 ef0905299b05e713fbb019ae7ca5e3e6ebfbf32d47fdd4d803e96a3bda500f71
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQEcBAEBCgAGBQJONDqtAAoJEBZyv1r2qA5GSzAIAIOp1ZW0Aw7/cwkMZQQTQAjK
+QWwr/aZlCDOFhpLb0QPj44HrBf16MwbEyhBjY/1she7OK68WNhwlxX2lEXNshcg4
+wMarasZ1TBcu7nN2zaXR/EAwDrJZW/Bi7dT3IWC7Sh9iRBQbQ953BtsFWo9bvOrl
+VA/0hC7IOeoCG959673bNT/hFBI2tSfPh0K3ixK5hSemH4WWICY8RWZxiOOQmJya
+BIYR0KDF3QxaOWnaluGJlTR03ONjZK9A94GlokDmrkJsKXpr0djH1r/oWTJSt89i
+ZEf8fRD7dGzrUu13i2QcLvI2MyrSyrGvbxkyiEs6dDYiQvHWF1LzOdYmWdtH0pM=
+=OEi4
+-----END PGP SIGNATURE-----
