@@ -1,6 +1,12 @@
 # ChangeLog for app-i18n/man-pages-pl
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/man-pages-pl/ChangeLog,v 1.13 2010/10/19 10:23:57 leio Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/man-pages-pl/ChangeLog,v 1.14 2011/07/30 17:08:55 nelchael Exp $
+
+*man-pages-pl-20070628-r1 (30 Jul 2011)
+
+  30 Jul 2011; Krzysztof Pawlik <nelchael@gentoo.org>
+  +man-pages-pl-20070628-r1.ebuild:
+  Remove man pages provided by sys-apps/man-db, see bug #375623.
 
   19 Oct 2010; Mart Raudsepp <leio@gentoo.org> man-pages-pl-20070628.ebuild:
   Drop to ~mips
